# ontoportal-api

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: Architecture-Overview.md  Client-SDK-Documentation.md  Contributing-Guide.md  Data-and-Semantics.md  Endpoint-Guides-Annotator.md  Endpoint-Guides-Classes.md  Endpoint-Guides-Ontologies.md  Endpoint-Guides-Recommender.md  Endpoint-Guides-Search.md  Endpoint-Guides.md  Error-Handling-and-Limits.md  Getting-Started.md  Home.md  OpenAPI-Specification.md  Pagination-and-Hypermedia.md  Python-SDK-Quickstart.md  Reference-Appendix.md  Release-and-Versioning.md  Testing-and-Validation.md  Usage-Patterns.md  _Sidebar.md
examples/: annotate_text.py  auth_query_param.py  fetch_class_hierarchy.py  search_term.py
ontoportal_client/: __init__.py  client.py  config.py  exceptions.py  http.py  models.py  utils.py
openapi/: ontoportal.json  ontoportal.yaml
tests/: conftest.py  test_client_pagination.py  test_http_auth_and_errors.py  test_live_api.py
