[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoportal-client"
version = "0.1.17"
description = "Reusable Python client for OntoPortal/BioPortal REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
  { name = "OntoPortal API Client" }
]
keywords = ["bioportal", "ontoportal", "ontology", "client", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["ontoportal_client*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
